fixes #6262 - wraps system name display to prevent overlapping in table, BZ 1019773

--- a/engines/bastion/app/assets/stylesheets/bastion/nutupane.less
+++ b/engines/bastion/app/assets/stylesheets/bastion/nutupane.less
@@ -39,6 +39,11 @@ td.row-select {
 }
 
 .nutupane {
+
+  td {
+    word-wrap: break-word;
+  }
+
   .table {
     margin-bottom: 0;
 
